# platsbanken-auto-job-applier

./: Cargo.toml
src/: lib.rs  main.rs
